# iperf3-python

./: .gitignore  .pre-commit-config.yaml  .travis.yml  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: lint.yaml
docs/: Makefile  conf.py  index.rst
docs/source/: conf.py  examples.rst  index.rst  installation.rst  introduction.rst  modules.rst
docs/source/_templates/: sidebarintro.html  sidebarlogo.html
examples/: client.py  client_deprecated.py  client_with_auth.py  private.pem  private_not_protected.pem  public.pem  server.py  server_deprecated.py  server_with_auth.py  udp_client.py
iperf3/: __init__.py  iperf3.py  iperf3_interfaces.py
iperf3/test/: test_iperf3.py
tests/: add_user.sh  authorized_users.txt  generate_auth_test_files.sh  private_not_protected.pem  public.pem  results.json  test_iperf3.py
