[tool.poetry]
name = "iperf3"
version = "0.1.13"
description = ""
authors = ["Nathan Edwards <nathan.edwards@greenroomrobotics.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dacite = "^1.6.0"
setuptools = "^62.3.3"

[tool.poetry.dev-dependencies]
setuptools = "^62.3.3"
pytest = "^7.1.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
